--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,4 +1,4 @@
 <!--pages/list/list.wxml-->
 <view class="navbar">
-<CustomNav profilePic="/image/logo_s.png" />
+<CustomNav profilePic="/image/logo.png" />
 </view>
