--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -2,3 +2,22 @@
 <view class="navbar">
 <CustomNav profilePic="/images/logo.png" />
 </view>
+
+<view class='map-container'>
+  <map 
+  class='map' 
+  id='myMap' 
+  longitude="{{long}}" 
+  latitude="{{lag}}" 
+  scale="{{scale}}" 
+  show-location="true" 
+  bindmarkertap="bindMakertap"
+  bindregionchange='bindregionchange'
+  bindcallouttap = "bindcallouttap" 
+  bindcontroltap='controlTap'  
+  controls='{{controls}}'
+  indtap='bindMapTap'
+  markers= "{{markers}}"
+  scale="18"style="width: 100%; height: 77vh; top: 8vh">
+  </map>
+</view>
