--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -2,3 +2,7 @@
 <view class="navbar">
 <CustomNav profilePic="/image/logo.png" />
 </view>
+
+<view wx:for="{{posts}}">
+  <view>{{item.description}}</view>
+</view>
