--- a/pages/create/create.wxss
+++ b/pages/create/create.wxss
@@ -1,21 +1,28 @@
 /* pages/create/create.wxss */
-.pair {
+
+.section {
   display: flex;
-  justify-items: center;
+  align-items: center;
+} 
+.section__title {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  margin: 0px 10px;
 }
-
-#back {
-  padding-left: 4vw;
-  padding-top: 7vh;
-  width:32px;
-  height:25px;
+.text-area-wrap {
+  width: 90%;
+  margin-left: auto;
+  background-color: rgba(255, 255, 255, 0.8); 
+  word-wrap: break-word;
 }
-
-#logo {
-  width:56px;
-  height:56px;
-  margin:47px 0 0 19px;
-  position:absolute;
-  margin-top:9%;
-  margin-left:44%;
+textarea {
+  word-wrap: break-word;
+}
+/* others */
+form {
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 14px; 
+}
+textarea {
+ width:90%;
 }
