--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -1,4 +1,8 @@
 /* pages/list/list.wxss */
+.page {
+  background-image: url("/images/landing.jpg");
+}
+
 .pair {
   display: flex;
   justify-items: center;
@@ -18,4 +22,56 @@
   position:absolute;
   margin-top:9%;
   margin-left:44%;
+}
+
+.post {
+  display: flex;
+  justify-content: space-between;
+  height: 20vh;
+  width: 95%;
+  margin: 10px auto;
+  background-size: cover !important;
+  background-position: center;
+  color: black;
+  border-radius: 14px;
+  box-shadow:         1px 1px 1px 1px rgba(0,0,0,0.3);
+  background-color: #dfdfdf;
+  text-align: center;
+  padding: 5px;
+}
+
+.avatar {
+width: 32px;
+height: 32px;
+left: 31px;
+top: 180px;
+}
+
+.group {
+  display: flex;
+   justify-content: space-between;
+}
+
+.info {
+  display: flex;
+   justify-content: space-between;
+}
+
+.capacity {
+width: 32px;
+height: 32px;
+left: 31px;
+top: 180px;
+}
+
+.h1 {
+  font-size: 10pt;
+}
+
+.h2 {
+  font-size: 10pt;
+}
+
+.p {
+  font-size: 10pt;
 }
