--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -24,6 +24,16 @@
 <!-- END OF SCROLLING TEXT -->
 
 <view class='map-container'>
-  <map class='map' id='myMap' longitude="{{long}}" latitude="{{lat}}" show-location="true" controls='{{controls}}' bindtap='bindMapTap' markers="{{markers}}" scale="12" style="width: 100%; height: 76vh; top: 0vh">
+  <map 
+  class='map' 
+  id='myMap' 
+  longitude="{{long}}" 
+  latitude="{{lat}}" 
+  show-location="true" 
+  bindmarkertap="goToShowPage"
+  controls='{{controls}}'
+  bindtap='bindMapTap'
+  markers= "{{markers}}"
+  scale="12"style="width: 100%; height: 76vh; top: 0vh">
   </map>
 </view>
