--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,7 +1,10 @@
 /**index.wxss**/
 page {
   background-image: url("http://lc-f0mqpbjn.cn-n1.lcfile.com/9b96b3060710a21dc925/1753895089.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
 .t1 {
   font-size: 40pt;
 }
