--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -1,4 +1,16 @@
 /* pages/card/card.wxss */
+page {
+  background-image: url("http://lc-f0mqpbjn.cn-n1.lcfile.com/9b96b3060710a21dc925/1753895089.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.nav-outer-container {
+  background-color: #1c819e;
+  height: 95px;
+  width: 100%;
+}
+
 .pair {
   position: sticky;
   display: flex;
@@ -19,4 +31,35 @@
   position:absolute;
   margin-top:9%;
   margin-left:44%;
+}
+
+.card {
+ display: flex;
+  flex-direction: column;
+  height: 63vh;
+  width: 90%;
+  margin: 13px auto;
+  background-size: cover !important;
+  background-position: center;
+  color: black;
+  border-radius: 14px;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
+  background-color: #dfdfdf;
+  text-align: center;
+  padding: 5px;
+}
+
+.avatar {
+  margin: 10px 10px;
+  width: 32px;
+  height: 32px;
+  left: 31px;
+  top: 180px;
+}
+
+.capacity {
+  width: 32px;
+  height: 32px;
+  left: 31px;
+  top: 180px;
 }
