--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -1,7 +1,9 @@
 /* pages/list/list.wxss */
 
-.page {
-  background-image: url("/images/landing.jpg");
+page {
+  background-image: url("http://lc-f0mqpbjn.cn-n1.lcfile.com/9b96b3060710a21dc925/1753895089.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .pair {
