--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -1,10 +1,13 @@
 <!--pages/card/card.wxml-->
 
 
-<view>{{post.capacity}}</view>
-<view>{{post.location}}</view>
-<view wx:for="{{post.comments}}">
-  <view>{{item.comment}}</view>
+<view>capacity: {{post.capacity}}</view>
+<view>location: {{post.location}}</view>
+<view>description: {{post.description}}</view>
+<view>date: {{post.date}}</view>
+<view wx:for="{{post.comments}}" wx:for-item="comment">
+  <view>comment: {{comment.comment}}</view>
+  <view>date: {{comment.date}}</view>
 </view>
 
 <form bindsubmit="formSubmit" bindreset="formReset">
