--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -20,3 +20,17 @@
   margin-top:9%;
   margin-left:44%;
 }
+
+page {
+  background-image: url("http://lc-f0mqpbjn.cn-n1.lcfile.com/9b96b3060710a21dc925/1753895089.jpg");
+}
+
+.card {
+  margin-top: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 14px;
+  border-radius: 8px;
+  background: #dfdfdf;
+  
+}
