--- a/pages/create/create.wxss
+++ b/pages/create/create.wxss
@@ -1,4 +1,9 @@
 /* pages/create/create.wxss */
+page {
+  background-image: url("http://lc-f0mqpbjn.cn-n1.lcfile.com/9b96b3060710a21dc925/1753895089.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
 .section {
   display: flex;
@@ -10,19 +15,46 @@
   margin: 0px 10px;
 }
 .text-area-wrap {
-  width: 90%;
-  margin-left: auto;
-  background-color: rgba(255, 255, 255, 0.8); 
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0); 
   word-wrap: break-word;
+  margin-right: 20px;
 }
 textarea {
+  width: 100%;
   word-wrap: break-word;
+  background-color: #ffffff;
+  opacity: 0.8;
+  font-size: 15pt;
+  border-radius: 1px;
+
 }
 /* others */
 form {
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 font-size: 14px; 
+word-wrap: break-word;
+word-break: break-all;
+
 }
 textarea {
- width:90%;
+ width:100%;
+ height: 23vh;
+ border-radius:10px;
+ margin:10px;
+
+}
+
+button {
+  border-radius: 15px;
+  width:70vw;
+}
+
+.gps {
+  height:25px;
+  width:25px;
+  position:absolute;
+  left:33vw;
+  bottom:49vh;
+
 }
