--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -4,6 +4,7 @@ page {
   background-image: url("http://lc-f0mqpbjn.cn-n1.lcfile.com/9b96b3060710a21dc925/1753895089.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-color:#358394;
 }
 
 .pair {
