--- a/pages/create/create.wxss
+++ b/pages/create/create.wxss
@@ -8,6 +8,7 @@ page {
 .section {
   display: flex;
   align-items: center;
+  padding: 11px;
 } 
 .section__title {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -18,23 +19,22 @@ page {
   width: 100%;
   background-color: rgba(0, 0, 0, 0); 
   word-wrap: break-word;
-  margin-right: 20px;
+  margin-right: 9vw;
+
 }
 textarea {
   width: 100%;
-  word-wrap: break-word;
   background-color: #ffffff;
   opacity: 0.8;
   font-size: 15pt;
   border-radius: 1px;
-
+  padding: 10px;
+  word-break: break-all;
 }
 /* others */
 form {
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 font-size: 14px; 
-word-wrap: break-word;
-word-break: break-all;
 
 }
 textarea {
@@ -42,7 +42,6 @@ textarea {
  height: 23vh;
  border-radius:10px;
  margin:10px;
-
 }
 
 button {
