--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -43,6 +43,11 @@
           <view class="comments-content">{{comment.comment}}</view>
         </view>
         
+      <form bindsubmit="formSubmit">
+       <input class="comment-input" name="comment" placeholder='input comment here'></input>
+      <button class="comment-submit" formType="submit">Submit</button>
+      </form>
+  
       </view>
       </view>
      
